--- a/Python/Number.ipynb
+++ b/Python/Number.ipynb
@@ -172,7 +172,7 @@
     "izin = 2\n",
     "total_kerja = 40\n",
     "\n",
-    "total_gaji = ((40 - 2) * gaji) + (total_lembur * bonus_lembur)"
+    "total_gaji = ((total_kerja - izin) * gaji) + (total_lembur * bonus_lembur)"
    ]
   },
   {
